--- a/sling-stanbol-ui/src/main/resources/initial-content/stanbol/styles/resource-page.css
+++ b/sling-stanbol-ui/src/main/resources/initial-content/stanbol/styles/resource-page.css
@@ -1,3 +1,11 @@
 #editArea {
 	margin-top: 3em;	
 }
+
+.logo2 {
+	float: right;
+    width: 27em;
+    height: 81px;
+    text-align: center;
+    background-color: #272727;
+}
